2013-08-15  Araki Ken  <arakiken@users.sf.net>

	* fb/x_display.c: orig_reg is copied from 768x512x4 crtc and videoc
	  (except videoc.r2 = 0x20) instead of being copied from reg in order
	  not to slide the screen on exit.

2013-08-14  Araki Ken  <arakiken@users.sf.net>

	* fb/x_display.c: Cleanup code for NetBSD/x68k.

2013-08-13  Araki Ken  <arakiken@users.sf.net>

	* fb/x_display.c: open_display() on NetBSD is separated to
	  open_display() for wscons and open_display() for x68k.

2013-08-12  Araki Ken  <arakiken@users.sf.net>

	* x_main_config.c: "fb_resolution" option is available on NetBSD/x68k
	  framebuffer.

	* fb/x_display.c, fb/x_imagelib.c:
	  /dev/grf1 support for NetBSD/x68k is added.

	* mkf/configure.in, mkf/libtbl/Makefile:
	  If --disable-dl-table is not specified, don't make at libtbl/.

2013-08-07  Araki Ken  <arakiken@users.sf.net>

	* fb/x_window.c: The bug of copy_area() which disabled redrawing
	  the margin area is fixed.

	* version.h.in: 3.2.1 -> 3.2.1 post

2013-08-06  Araki Ken  <arakiken@users.sf.net>

	* 3.2.2 released.
	  (tag "rel-3_2_2")

	* configure.in, mlterm.spec, main/version.h.in,
	  doc/en/ReleaseNote: updated for 3.2.2.

2013-08-05  Araki Ken  <arakiken@users.sf.net>

	* main.c: If __argv is NULL on win32, dummy_argv ({"mlterm",NULL}) is
	  used instead.

2013-08-04  Araki Ken  <arakiken@users.sf.net>

	* kiklib/configure.in: socklen_t of winsock is checked.

	* win32/x.h: _WINSOCK2_H is not defined unless __CYGWIN__ or __MSYS__
	  to fix compilation error with i686-pc-mingw32-gcc.

	* win32/x_xic.c: CFS_POINT is replaced by CFS_FORCE_POSITION and
	  x_xic_set_spot() in x_xic_set_focus() is removed.

2013-08-04  Araki Ken  <arakiken@users.sf.net>

	* win32/x_xic.c:
	  - Y of the preedit position is fixed.
	  - x_xic_set_spot() is called in x_xic_set_focus().

2013-08-03  Araki Ken  <arakiken@users.sf.net>

	* kik_dlfcn.c, x_event_source.c, main/main.c:
	  kik_dl_close_all() is called at the end of main() instead of